# paper-daily

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  profile.txt  profile.txt.example  pyproject.toml
.github/workflows/: daily.yml
paper_daily/: config.py  embed.py  fetch.py  format.py  rank.py  select.py  telegram.py
tests/: test_config.py  test_embed.py  test_fetch.py  test_format.py  test_rank.py  test_select.py  test_telegram.py
